# IR-Py-Thermal

./: .gitignore  README.md  display.py  example_simple.py  irpythermal.py  opencv.py  pyplot.py  pyproject.toml  requirements.txt  utils.py
